# odysseus

./: .gitignore  Dockerfile  README.md  ROADMAP.md  SECURITY.md  odysseus-ui.service  pyproject.toml  setup.py
backend/: .gitignore  alembic.ini  app.py  pyproject.toml
backend/agent/: __init__.py  deps.py  engine.py  meta.py  title.py  translate.py
backend/core/: __init__.py  auth.py  config.py  crypto.py  db.py  exceptions.py  serde.py  ssrf.py  untrusted.py  vault.py  worker.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 4ef3ed2e19d2_branched_conversation_tree.py  5fec837f8026_added_the_artifacts_table_for_published_.py  62a3cad50db9_add_memories.py  70a62889b6e2_initial_schema.py  9c3c293f5100_add_search_providers.py  a1c4e7b9d203_conversation_ephemeral_flag.py  d8f9871c9589_made_endpoint_model_optional.py  db79d55f0aa1_message_pin_flag.py  e6b7252fc39a_added_denormalized_last_used_model_to_.py
backend/models/: __init__.py  _fields.py  artifact.py  conversation.py  memory.py  registry.py  search.py
backend/prompts/: __init__.py  agent.py  utility.py
backend/research/: __init__.py
backend/routes/: __init__.py  artifacts.py  auth.py  chat.py  conversations.py  deps.py  health.py  memory.py  models.py  overview.py  previews.py  runs.py  search.py
backend/runs/: __init__.py  events.py  registry.py  run.py  stream.py  transport.py
backend/services/: __init__.py  artifacts.py  conversation_view.py  conversations.py  embeddings.py  llm.py  memory.py  reasoning.py  registry.py  search.py  searxng.py
backend/services/sandbox/: __init__.py  base.py  container.py  detect.py  host.py  preview.py  session.py
backend/tests/: _helpers.py  test_agent_translate.py  test_approval.py  test_approval_routes.py  test_artifacts.py  test_auth.py  test_branching.py  test_chat_engine.py  test_chat_routes.py  test_code_tools.py  test_conversation_store.py  test_conversations_routes.py  test_health.py  test_memory.py  test_meta.py  test_migrations.py  test_model_load_error.py  test_overview_route.py  test_persistence.py  test_preview.py  test_preview_tools.py  test_previews_route.py  test_reasoning.py  test_registry.py  test_run_registry.py  test_run_stream.py  test_runs_routes.py  test_sandbox.py  test_sandbox_preview.py  test_sandbox_session.py  test_search.py  test_search_routes.py  test_searxng.py  test_ssrf.py  test_titling.py  test_tools.py  test_untrusted.py  test_vault.py  test_worker.py
backend/tools/: __init__.py  builtin.py  code.py  deps.py  memory.py  preview.py  search.py  toolsets.py
docs/: terminal-hud-design-system.md
docs/architecture/: 40-tools-and-toolsets.md  70-spec-coverage.md  README.md  decisions.md
docs/spec/: 00-overview.md  10-agent-engine.md  11-deep-research.md  20-feature-inventory.md  README.md
frontend/: .gitignore  eslint.config.js  package.json  tsconfig.json  vite.config.ts
frontend/docs/: ux-gap-audit.md
frontend/src/: app.css  app.tsx  entry-server.tsx
frontend/src/app/: AppShell.tsx  AuthLayout.tsx  Sidebar.tsx  nav.ts  usePageTitle.ts
frontend/src/lib/: config.ts  storage.ts
frontend/src/ui/: cx.ts  (+2 more)
routes/: cookbook_routes.py  cookbook_runner.py  gallery_routes.py  research_routes.py  shell_routes.py
scripts/: hf_download.py  odysseus
scripts/demo_email/: manage.sh
services/research/: research_handler.py  service.py
services/stt/: stt_service.py
services/tts/: tts_service.py
src/: chroma_client.py  deep_research.py  embeddings.py  mcp_manager.py  pdf_forms.py  research_handler.py  research_utils.py
static/: style.css
static/js/: MODULE_SUMMARY.md  cookbook-diagnosis.js  cookbook.js  cookbookRunning.js
tests/: test_cookbook_helpers.py  test_research_routes.py  test_research_utils.py
(+291 files in other folders)
