[project]
name = "odysseus"
version = "1.0.0"
description = "Self-hosted, local-first AI workspace: chat, agents, memory/RAG, deep research, email/calendar, documents, and more."
readme = "README.md"
# Deployment targets Python 3.12 (see Dockerfile). Upper bound keeps the lock on
# interpreters with prebuilt wheels for the native deps (chromadb / chroma-hnswlib).
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core web framework
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "pydantic",
    "pydantic-settings",
    # Database & ORM
    "SQLAlchemy",
    # Documents
    "pypdf",
    "beautifulsoup4",
    "charset-normalizer",
    "markdown",
    # AI / RAG — vector store + local embeddings (core agent paths; the app
    # still degrades to keyword fallback if they're ever missing).
    "numpy",
    "chromadb",
    "fastembed",
    # Media / integrations
    "youtube-transcript-api",
    "icalendar",
    "caldav",
    # Auth & security
    "cryptography",
    "bcrypt",
    "pyotp",
    "qrcode[pil]",
    # Tooling
    "mcp",
    "croniter",
]

[project.optional-dependencies]
# DuckDuckGo as a search-provider option (alongside SearXNG/Brave/Tavily/etc).
search-ddg = ["duckduckgo-search"]
# PDF form-filling (AcroForm detection/fill/stamp). NOTE: PyMuPDF is AGPL-3.0;
# installing it brings AGPL obligations for a network-served app — see
# ACKNOWLEDGMENTS.md. The MIT core (PDF text extraction via pypdf) works without it.
pdf-forms = ["PyMuPDF"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
# Odysseus is an application, not an installable library — install its
# dependencies into the environment without building/installing the project.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
